--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bg-steel {
-  background-color: #5f788a;
+  background-color: #ffc0cb;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -54,7 +54,7 @@ a.article-title:hover {
 .article-metadata {
   padding-bottom: 1px;
   margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
+  border-bottom: 1px solid #FFB6C1
 }
 
 .article-metadata a:hover {
